--- a/client/src/css/popups.css
+++ b/client/src/css/popups.css
@@ -1,5 +1,19 @@
 /* Stuff for all popups */
 
+.full-page-popup-container {
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    visibility: hidden;
+    z-index: 6;
+}
+
 /* Stuff for Add Contact Popup */ 
 
 .content-column{
